--- a/css/app.css
+++ b/css/app.css
@@ -59,7 +59,10 @@ h2 {
     background-color: #d32f2f;
 }
 
-
 #kerbala {
     background-color: #d69f5f;
+}
+
+#najaf {
+    background-color: #d99f2f;
 }
